// Code generated by protoc-gen-proto. DO NOT EDIT.

// This is a compile-time assertion to ensure that this generated file
// is compatible with the proto package it is being compiled against.
// A compilation error at this line likely means your copy of the
// proto package needs to be updated.

syntax = "proto3";

package mojo.core;

import "mojo/core/error.proto";
import "mojo/core/null.proto";

option go_package = "github.com/mojo-lang/core/go/pkg/mojo/core;core";
option java_multiple_files = true;
option java_outer_classname = "StatusProto";
option java_package = "org.mojolang.mojo.core";

message Status {
    oneof status {
        Error error_val = 1;
        Null null_val = 2;
    }
}
