// Code generated by wand. DO NOT EDIT.

syntax = "proto3";

package mojo.core;

option go_package = "github.com/mojo-lang/core/go/pkg/mojo/core;core";
option java_multiple_files = true;
option java_outer_classname = "ValueProto";
option java_package = "org.mojolang.mojo.core";

message Object {
    map<string, Value> values = 1;
}

message Values {
    repeated Value values = 1;
}

message Value {
    oneof value {
        Values values_val = 1;
        Object object_val = 2;
        bool bool_val = 3;
        int64 int64_val = 4;
        double double_val = 5;
        string string_val = 7;
    }
}
